Trying new fix for sidebar rendering on mobile

--- a/practice_business/src/styles/Sidebar.scss
+++ b/practice_business/src/styles/Sidebar.scss
@@ -13,7 +13,7 @@
     background: $background-light-primary;
     overflow: hidden;
     .sidebar-container{
-        position: fixed;
+        position: fixed !important;
         width: 260px;
         height: 460px;
         display: flex;
